@@ -1,35 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-# See tmpfiles.d(5) for details
-
-# These files are considered legacy and are unnecessary on legacy-free
-# systems.
-
-d /run/lock 0755 root root -
-L /var/lock - - - - ../run/lock
-
-# /run/lock/subsys is used for serializing SysV service execution, and
-# hence without use on SysV-less systems.
-
-d /run/lock/subsys 0755 root root -
-
-# /run/lock/lockdev is used to serialize access to tty devices via
-# LCK..xxx style lock files, For more information see:
-# http://lists.freedesktop.org/archives/systemd-devel/2011-March/001823.html
-# On modern systems a BSD file lock is a better choice if
-# serialization is needed on those devices.
-
-d /run/lock/lockdev 0775 root lock -
-
-# /forcefsck, /fastboot and /forcequotecheck are deprecated in favor of the
-# kernel command line options 'fsck.mode=force', 'fsck.mode=skip' and
-# 'quotacheck.mode=force'
-
-r! /forcefsck
-r! /fastboot
-r! /forcequotacheck
